--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "py-dataframe-show-reader"
-version = "2.1.0"
+version = "2.1.1"
 description = "Reads the output of a DataFrame.show() statement into a DataFrame"
 authors = ["Steve Whalen <sjwhalen@yahoo.com>"]
 license = "Apache-2.0"
@@ -10,7 +10,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "3.9.6"
+python = "^3.9"
 
 [tool.poetry.dev-dependencies]
 pyspark = "3.1.2"
